fix banner text wrap issue for iPhone

--- a/src/style.css
+++ b/src/style.css
@@ -86,7 +86,7 @@ header > * {
   top: 0;
   height: 6rem;
   overflow: hidden;
-  text-wrap: nowrap;
+  white-space: nowrap;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -104,7 +104,7 @@ header > * {
 }
 @keyframes banner-slide {
   from {
-    transform: translateX(calc(var(--modal-width) + 12vw));
+    transform: translateX(calc(var(--modal-width) + 11vw));
   }
   to {
     transform: translateX(calc(-1 * (var(--charLength))));
@@ -143,7 +143,7 @@ header > * {
   top: 0;
   right: 0;
   z-index: 5;
-  margin: 1.5rem 3rem 0 0;
+  margin: 1.5rem 1.5rem 0 0;
   color: var(--white);
   font: 1.75rem "Rubik";
   opacity: 0.6;
